--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>香港教育通 - 您的香港教育资讯平台</title>
+    <title>港校一站通 - 您的香港教育资讯平台</title>
     <link rel="stylesheet" href="styles.css">
-    <meta name="description" content="香港教育通 - 提供香港中小学学校资讯、考试试卷、插班服务的综合教育平台">
+    <meta name="description" content="港校一站通 - 提供香港中小学学校资讯、考试试卷、插班服务的综合教育平台">
 </head>
 <body>
     <header>
@@ -15,7 +15,7 @@
             <a href="/en">English</a>
         </nav>
         <div class="header-content">
-            <h1>香港教育通</h1>
+            <h1>港校一站通</h1>
             <p class="subtitle">您的香港教育资讯综合平台</p>
         </div>
     </header>
@@ -61,7 +61,7 @@
     <footer>
         <div class="footer-content">
             <div class="company-info">
-                <p>香港教育通</p>
+                <p>港校一站通</p>
                 <p>您的香港教育资讯平台</p>
             </div>
             <div class="icp-info">
