--- a/zh-HK/index.html
+++ b/zh-HK/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>香港教育通 - 您的香港教育資訊平台</title>
+    <title>港校一站通 - 您的香港教育資訊平台</title>
     <link rel="stylesheet" href="../styles.css">
-    <meta name="description" content="香港教育通 - 提供香港中小學學校資訊、考試試卷、插班服務的綜合教育平台">
+    <meta name="description" content="港校一站通 - 提供香港中小學學校資訊、考試試卷、插班服務的綜合教育平台">
 </head>
 <body>
     <header>
         <div class="header-content">
-            <h1>香港教育通</h1>
+            <h1>港校一站通</h1>
             <p class="subtitle">您的香港教育資訊綜合平台</p>
         </div>
         <nav class="language-switcher">
@@ -61,7 +61,7 @@
     <footer>
         <div class="footer-content">
             <div class="company-info">
-                <p>香港教育通</p>
+                <p>港校一站通</p>
                 <p>您的香港教育資訊平台</p>
             </div>
             <div class="icp-info">
